@@ -71,6 +71,18 @@ class RemoteAdyenTest < Test::Unit::TestCase
     assert_equal 'Authorised', response.message
   end
 
+  def test_successful_authorize_with_idempotency_key
+    options = @options.merge(idempotency_key: 'test123')
+    response = @gateway.authorize(@amount, @credit_card, options)
+    assert_success response
+    assert_equal 'Authorised', response.message
+    first_auth = response.authorization
+
+    response = @gateway.authorize(@amount, @credit_card, options)
+    assert_success response
+    assert_equal response.authorization, first_auth
+  end
+
   def test_successful_authorize_with_3ds
     assert response = @gateway.authorize(@amount, @three_ds_enrolled_card, @options.merge(execute_threed: true))
     assert response.test?
@@ -327,6 +339,21 @@ class RemoteAdyenTest < Test::Unit::TestCase
     response = @gateway.verify(@declined_card, @options)
     assert_failure response
     assert_match 'Refused', response.message
+  end
+
+  def test_verify_with_idempotency_key
+    options = @options.merge(idempotency_key: 'test123')
+    response = @gateway.authorize(0, @credit_card, options)
+    assert_success response
+    assert_equal 'Authorised', response.message
+    first_auth = response.authorization
+
+    response = @gateway.verify(@credit_card, options)
+    assert_success response
+    assert_equal response.authorization, first_auth
+
+    response = @gateway.void(first_auth, @options)
+    assert_success response
   end
 
   def test_invalid_login
