@@ -11,6 +11,7 @@
 * Adyen: Correctly process risk_data option [bayprogrammer] #3161
 * Paymentez: Adds Elo card type [deedeelavinder] #3162
 * WorldPay: Adds Elo card type [deedeelavinder] #3163
+* Adyen: Idempotency for non-purchase requests [molbrown] #3164
 
 == Version 1.91.0 (February 22, 2019)
 * WorldPay: Pull CVC and AVS Result from Response [nfarve] #3106
